Added SeekAndTakeNearbyItems and AbstractSeekAndTake Improved inventory checking Made Dragon attack any living entity holding its weapon when untamed Fixed items in shadow mode not counting correctly Improved and renamed SeekAndTakeHiddenFourWeaponsMap